# python_cpp_examples

./: README.md
image_processing/: .gitignore  CMakeLists.txt  README.md
image_processing/image_processing_plugins/: blur.py  laplacian.py
image_processing/src/: ImageDisplayWidget.cpp  ImageDisplayWidget.h  ImageOperationPluginManager.cpp  ImageOperationPluginManager.h  ImageProcessingWidget.cpp  ImageProcessingWidget.h  main.cpp
mamaheux_signal_processing_cpp/: .gitignore  CMakeLists.txt  README.md  setup.py
mamaheux_signal_processing_cpp/python_examples/: bench_signal_statistics.py  compressor_effect.py  image_histogram.py
mamaheux_signal_processing_cpp/src/: Effects.cpp  Effects.h  SignalStatistics.cpp  SignalStatistics.h  main.cpp
